@@ -21,7 +21,7 @@ import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
 import net.mcreator.craftkaisen.init.CraftKaisenModTabs;
-import net.mcreator.craftkaisen.client.model.Modeljjkoutfiot;
+import net.mcreator.craftkaisen.client.model.Modelsorcerernew;
 
 import java.util.function.Consumer;
 import java.util.Map;
@@ -83,9 +83,9 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modeljjkoutfiot(Minecraft.getInstance().getEntityModels().bakeLayer(Modeljjkoutfiot.LAYER_LOCATION)).Body, "left_arm",
-							new Modeljjkoutfiot(Minecraft.getInstance().getEntityModels().bakeLayer(Modeljjkoutfiot.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modeljjkoutfiot(Minecraft.getInstance().getEntityModels().bakeLayer(Modeljjkoutfiot.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelsorcerernew(Minecraft.getInstance().getEntityModels().bakeLayer(Modelsorcerernew.LAYER_LOCATION)).Body, "left_arm",
+							new Modelsorcerernew(Minecraft.getInstance().getEntityModels().bakeLayer(Modelsorcerernew.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modelsorcerernew(Minecraft.getInstance().getEntityModels().bakeLayer(Modelsorcerernew.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -97,7 +97,7 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "craft_kaisen:textures/entities/thomas_vn_jujutsu_kaisen_outfit_v2.png";
+			return "craft_kaisen:textures/entities/sorcereruniform.png";
 		}
 	}
 
@@ -113,8 +113,8 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modeljjkoutfiot(Minecraft.getInstance().getEntityModels().bakeLayer(Modeljjkoutfiot.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modeljjkoutfiot(Minecraft.getInstance().getEntityModels().bakeLayer(Modeljjkoutfiot.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelsorcerernew(Minecraft.getInstance().getEntityModels().bakeLayer(Modelsorcerernew.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelsorcerernew(Minecraft.getInstance().getEntityModels().bakeLayer(Modelsorcerernew.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -127,7 +127,7 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "craft_kaisen:textures/entities/thomas_vn_jujutsu_kaisen_outfit_v2.png";
+			return "craft_kaisen:textures/entities/sorcereruniform.png";
 		}
 	}
 }
